# sandy-2

./: Cargo.toml  README.md  index.html
.cargo/: config.toml
.github/workflows/: release.yml
packaging/: sandy.desktop
snap/: snapcraft.yaml
src/: app.rs  behaviors.rs  gpu.rs  lib.rs  main.rs  plugin.rs  shader.wgsl  sim.rs  ui.rs  worldgen.rs
src/entities/: ant.rs  behaviors.rs  bird.rs  fish.rs  mod.rs
src/materials/: algae.rs  cloud.rs  empty.rs  fire.rs  lava.rs  leaves.rs  meteor.rs  mod.rs  oil.rs  rain.rs  sand.rs  seeds.rs  soil.rs  stone.rs  water.rs  wet_soil.rs  wood.rs
