[package]
name = "sandy"
version = "0.1.0"
edition = "2021"
description = "A basic but extensible falling-sand simulation (wgpu + custom physics), web & desktop ready."
license = "AGPL-3.0-only"

# Both targets: an rlib so the native binary can link it, and a cdylib so the
# web build (trunk / wasm-bindgen) has something to load.
[lib]
crate-type = ["cdylib", "rlib"]

# A distinct name from the `sandy` library so the wasm build exposes a single
# unambiguous artifact (the cdylib) for trunk / wasm-bindgen to load.
[[bin]]
name = "sandy-desktop"
path = "src/main.rs"

[dependencies]
winit = "0.30.13"
wgpu = "29.0.3"
log = "0.4"
rhai = "1.25.1"
# egui drives the on-screen controls (material picker, brush, seed). These
# versions track wgpu 29 / winit 0.30. `egui-winit` runs with default features
# off so it doesn't drag in native-only clipboard/x11 deps (notably `arboard`,
# which won't build for wasm); `egui-wgpu` likewise, to skip the macOS
# `wgpu/metal` default that the non-Apple builds don't need.
egui = "0.34"
egui-wgpu = { version = "0.34", default-features = false }
egui-winit = { version = "0.34", default-features = false }
# The Rust port of FastNoise Lite — drives seed-based world generation
# (terrain heightmap + tree placement). Pure Rust, so it builds on web too.
fastnoise-lite = "1.1.1"

# ---- Desktop only ----
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.4"        # block_on for the async wgpu init on native
env_logger = "0.11"

# ---- Web only ----
[target.'cfg(target_arch = "wasm32")'.dependencies]
# `webgl` gives us a fallback for browsers without WebGPU.
wgpu = { version = "29.0.3", features = ["webgl"] }
# wgpu's resources aren't Send/Sync on wasm; this feature lets `egui-wgpu` hold
# them anyway (safe on the single-threaded web event loop).
egui-wgpu = { version = "0.34", default-features = false, features = ["fragile-send-sync-non-atomic-wasm"] }
# Pulled in transitively (ahash -> rhai). On wasm32 getrandom 0.3 needs the
# `wasm_js` feature *and* the `getrandom_backend="wasm_js"` cfg (see
# .cargo/config.toml) to use the browser's crypto.getRandomValues.
getrandom = { version = "0.3", features = ["wasm_js"] }
# Pinned: trunk downloads the matching wasm-bindgen-cli prebuilt binary, and
# 0.2.123 is on crates.io but has no GitHub release archive yet (404). Bump this
# only once the corresponding release exists at rustwasm/wasm-bindgen/releases.
wasm-bindgen = "=0.2.122"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "1"

[profile.release]
opt-level = 3
lto = true

# ---- Debian packaging (cargo-deb) ----
# `cargo deb` reads this to build a .deb. Shared-library dependencies (libx11,
# libxkbcommon, libwayland, ...) are derived automatically from the binary via
# dpkg-shlibdeps; the Vulkan ICD drivers below are dlopen'd at runtime, so they
# have to be listed by hand.
[package.metadata.deb]
name = "sandy"
maintainer = "Oliver"
section = "games"
priority = "optional"
# Pulls in a working Vulkan loader + Mesa drivers so wgpu has a GPU backend.
depends = "$auto, libvulkan1, mesa-vulkan-drivers"
extended-description = """\
Sandy is a falling-sand simulation built with wgpu and a custom physics \
engine. Paint with different materials, watch them flow, burn, and settle."""
assets = [
    ["target/release/sandy-desktop", "usr/bin/", "755"],
    ["packaging/sandy.desktop", "usr/share/applications/", "644"],
    ["packaging/sandy.svg", "usr/share/icons/hicolor/scalable/apps/", "644"],
    ["README.md", "usr/share/doc/sandy/README.md", "644"],
]
